# tonic_duplex_streaming_demo

./: Cargo.toml  README.md  build.rs  run.sh
proto/: consensus_service.proto
src/: consensus_service.rs  mod.rs
