[package]
name = "tonic_duplex_streaming_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello_client"
path = "src/client.rs"

[[bin]]
name = "hello_server"
path = "src/main.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"


[build-dependencies]
tonic-build = "*"
